--- a/Views/Pedido/Index.cshtml
+++ b/Views/Pedido/Index.cshtml
@@ -6,7 +6,7 @@
 
     <div class="container-fluid">
 
-        <h2>Lanche Escolhido: X-SALADA</h2>
+        <h2>@ViewBag.NomeLanche</h2>
 
         <div class="table-responsive">
 
@@ -33,11 +33,11 @@
 
                                 @if (item.PodeAlterar)
                                 {
-                                    <a name="incrementarIngrediente" href="#" class="btn btn-success btn-lg">
+                                    <a name="incrementarIngrediente" href="#" class="btn btn-success btn-sm">
                                         <span class="glyphicon glyphicon-plus"></span>
                                     </a>
 
-                                    <a name="decrementarIngrediente" href="#" class="btn btn-danger btn-lg">
+                                    <a name="decrementarIngrediente" href="#" class="btn btn-danger btn-sm">
                                         <span class="glyphicon glyphicon-minus"></span>
                                     </a>
 
@@ -57,7 +57,7 @@
 
         <h3 id="h3ValorLanche" style="color:blue;"></h3>
 
-        <button id="btn_Nova" type="button" class="btn btn-primary" asp-action="Create">
+        <button id="finalizarPedido" type="button" class="btn btn-primary">
             <span class="glyphicon glyphicon-ok"></span>
             <span>Finalizar Pedido</span>
         </button>
@@ -99,8 +99,8 @@
                         type: 'POST',
                         url: '/Pedido/CalcularPrecoLanche',
                         success:
-                            function (data) {
-                                
+                            function (data) {                                
+
                                 var valorLanche = data.ValorLanche; 
 
                                 $('#h3ValorLanche').text(valorLanche.toLocaleString("pt-BR", { style: "currency", currency: "BRL" }));                               
@@ -133,6 +133,21 @@
 
                 });
 
+                $('#finalizarPedido').click(function () {
+
+                    Swal.fire({
+                        title: 'Confirmação do Seu Pedido',
+                        showCancelButton: false,
+                        confirmButtonText: 'OK',
+                        text: 'Seu pedido foi finalizado com sucesso.',
+                        showLoaderOnConfirm: true,
+                        preConfirm: () => {
+                            window.location.href = "/Cardapio/Index";
+                        }
+
+                    });
+
+                });
                 
 
             });
